Upload observation site network base documents.

--- a/_data/docs_nav.yml
+++ b/_data/docs_nav.yml
@@ -7,4 +7,15 @@
     - link: /docs/observation-sites/
 - title: Observation Sites
   docs:
-    - link: /docs/site001/
+    - link: /docs/RC01/
+    - link: /docs/RC02/
+    - link: /docs/Q1_1/
+    - link: /docs/Q1_2/
+    - link: /docs/Q1_3/
+    - link: /docs/Q2_1/
+    - link: /docs/Q2_2/
+    - link: /docs/Q2_3/
+    - link: /docs/Q2_4/
+    - link: /docs/Q3_1/
+    - link: /docs/Q3_2/
+    - link: /docs/Q3_3/
