--- a/_data/docs_nav.yml
+++ b/_data/docs_nav.yml
@@ -7,6 +7,7 @@
     - link: /docs/observation-sites/
 - title: Observation Sites
   docs:
+    - link: /docs/sitemap/
     - link: /docs/RC01/
     - link: /docs/RC02/
     - link: /docs/Q1_1/
