--- a/_data/docs_nav.yml
+++ b/_data/docs_nav.yml
@@ -8,10 +8,10 @@
 - title: Observation Sites
   docs:
     - link: /docs/sitemap/
-    - link: /docs/RC01
-    - link: /docs/RC02
-    - link: /docs/Q1_1
-    - link: /docs/Q1_2
+    - link: /docs/RC01/
+    - link: /docs/RC02/
+    - link: /docs/Q1_1/
+    - link: /docs/Q1_2/
     - link: /docs/Q1_3/
     - link: /docs/Q2_1/
     - link: /docs/Q2_2/
