--- a/_data/docs_nav.yml
+++ b/_data/docs_nav.yml
@@ -11,7 +11,8 @@
     - link: /docs/RC01/
     - link: /docs/RC02/
     - link: /docs/Q1_1/
-    - link: /docs/Q1_2/
+    - link: /docs/Q1_2N/    
+    - link: /docs/Q1_2S/
     - link: /docs/Q1_3/
     - link: /docs/Q2_1/
     - link: /docs/Q2_2/
